--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,3 +7,15 @@ announcekiller: true
 
 worldonlymsg: false
 worldname: world_the_end
+
+#Award variables are the same as for messages. 
+
+#Award for the dragon killer.
+enablekillerrewards: false
+killrewards:
+    - "give %killer% dragon_egg 1"
+    
+#Dmg awards have a chance relative to % dmg done to the dragon (eg 20/100 dmg is a 20% chance).
+enabledmgrewards: false
+dmgrewards:
+    - "give %player% elytra 1"
