--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 					<relocations>
 						<relocation>
 							<pattern>org.bstats</pattern>
-							<shadedPattern>net.hraponssi.dragondmg</shadedPattern>
+							<shadedPattern>net.hraponssi.dragondmg.bstats</shadedPattern>
 						</relocation>
 					</relocations>
 				</configuration>
